# Praca_MGR

./: .gitattributes  .gitignore  Prędkości_robota.csv  debug.txt  frames_2025-04-24_18.50.25.gv  graph.g2o  komendy.txt  optimized.g2o  rviz_cfg.rviz
gazebo/: building_robot_camera.sdf  building_robot_camera_backup.sdf
gazebo/Local_Gazebo_Resources/models/Apriltag36_11_00000/: model.config
gazebo/Local_Gazebo_Resources/models/MTracker1/: model.config  model.sdf
gazebo/worlds/First/: building_robot.sdf  building_robot_camera-backup.sdf  building_robot_camera.sdf  building_robot_fixed.sdf  building_robot_pazder.sdf
log/: latest_build  latest_list
src/anglecalc/: CMakeLists.txt  package.xml
src/anglecalc/src/: angle.cpp
src/g2o_driver/: CMakeLists.txt  package.xml
src/g2o_driver/src/: driver.cpp
src/log/: latest_build
src/sim_launcher/: package.xml  setup.cfg  setup.py
src/sim_launcher/launch/: test.launch.py
